--- a/src/pages/colors-type/colors-type.pug
+++ b/src/pages/colors-type/colors-type.pug
@@ -7,19 +7,40 @@ html(lang= 'ru')
     script src="index.js"
     .logo
       img(src=require('./img/logo.png') alt='Логотип')
-    div.colors
-      div.colors-item
-        div.colors-item__square.colors-item__square_dark-100
-        div.colors__text
-          div.title Dark Shade 100%
-          div.subtitle #1F2041
-      div.colors-item
-        div.colors-item__square.colors-item__square_dark-75
-        div.colors__text
-          div.title Dark Shade 75%
-          div.subtitle #1F2041
-      div.colors-item
-        div.colors-item__square.colors-item__square_dark-50
-        div.colors__text
-          div.title Dark Shade 50%
-          div.subtitle #1F2041
+    .colors
+      .colors-item
+        .colors-item__square.colors-item__square_dark-100
+        .colors__text
+          .title Dark Shade 100%
+          .colors__subtitle #1F2041
+      .colors-item
+        .colors-item__square.colors-item__square_dark-75
+        .colors__text
+          .title Dark Shade 75%
+          .colors__subtitle #1F2041
+      .colors-item
+        .colors-item__square.colors-item__square_dark-50
+        .colors__text
+          .title Dark Shade 50%
+          .colors__subtitle #1F2041
+      .colors-item
+        .colors-item__square.colors-item__square_dark-25
+        .colors__text
+          .title Dark Shade 25%
+          .colors__subtitle #1F2041
+      .colors-item
+        .colors-item__square.colors-item__square_dark-5
+        .colors__text
+          .title Dark Shade 5%
+          .colors__subtitle #1F2041
+      .colors-item
+        .colors-item__square.colors-item__square_purple
+        .colors__text
+          .title Purple
+          .colors__subtitle #BC9CFF
+      .colors-item
+        .colors-item__square.colors-item__square_green
+        .colors__text
+          .title Green
+          .colors__subtitle #6FCF97
+    .type
