--- a/src/pages/colors-type/main.scss
+++ b/src/pages/colors-type/main.scss
@@ -1,8 +1,9 @@
-$font-size: 1rem;
+$font-size: 19px;
 $font-color: #1F2041;
 
 html {
-  font-family: 'Arimo';
+  font-family: 'Montserrat';
+  font-weight: 700;
   font-size: $font-size;
   color: $font-color;
   background: #FFFFFF;
@@ -10,3 +11,22 @@ html {
 body {
   margin: 0px;
 }
+.logo{
+  margin: 30px 0px 0px 30px
+}
+.colors{
+  margin: 55px 0px 0px 148px;
+}
+.colors-item{
+  margin: 10px 0px;
+}
+.colors__text{
+  margin: 10px 0px 0px 40px;
+}
+.colors__subtitle{
+  margin: 5px 0px 0px 0px;
+}
+.type{
+  
+}
+
